# hierarchicalforecast

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  THIRD_PARTY_LICENSES.md  core.html  core.html.mdx  core.mdx  docs.json  environment.yml  evaluation.html  evaluation.html.mdx  evaluation.mdx  index.html  index.html.mdx  index.mdx  listings.json  methods.html  methods.html.mdx  methods.mdx  mint.json  pr-description.md  probabilistic_methods.html  probabilistic_methods.html.mdx  probabilistic_methods.mdx  pyproject.toml  robots.txt  search.json  settings.ini  setup.py  sitemap.xml  utils.html  utils.html.mdx  utils.mdx
.circleci/: config.yml
.claude/: CLAUDE.md
.github/: release-drafter.yml
.github/workflows/: build-docs.yaml  ci.yml  lint.yml  pytest.yml  python-publish.yml  test-publish.yml
docs/: AustralianDomesticTourism.html  AustralianPrisonPopulation.html  Prison.html  TourismSmall.html  _config.yml  core.html  core.html.md  evaluation.html  evaluation.html.md  index.html  methods.html  methods.html.md  probabilistic_methods.html.md  sidebar.json  to_mdx.py  utils.html  utils.html.md
docs/mintlify/: docs.json  mint.json
examples/: AustralianDomesticTourism-Bootstraped-Intervals.html  AustralianDomesticTourism-Bootstraped-Intervals.mdx  AustralianDomesticTourism-Intervals.html  AustralianDomesticTourism-Intervals.mdx  AustralianDomesticTourism-Permbu-Intervals.html  AustralianDomesticTourism-Permbu-Intervals.mdx  AustralianDomesticTourism.html  AustralianDomesticTourism.ipynb  AustralianDomesticTourismTemporal.mdx  AustralianPrisonPopulation.html  AustralianPrisonPopulation.ipynb  HierarchicalForecast-GluonTS.html  Installation.html  Introduction.html  Introduction.mdx  LocalGlobalAggregation.mdx  MLFrameworksExample.html  MLFrameworksExample.mdx  NonNegativeReconciliation.html  ReconcileFromBottomSeries.ipynb  TourismLarge-Evaluation.html  TourismLarge-Evaluation.mdx  TourismSmall.html  TourismSmall.ipynb  TourismSmall.mdx  TourismSmallPolars.mdx  australiandomestictourism-bootstraped-intervals.html  australiandomestictourism-bootstraped-intervals.html.mdx  australiandomestictourism-covariancemethods.html.mdx  australiandomestictourism-intervals.html  australiandomestictourism-intervals.html.mdx  australiandomestictourism-multimodel.html  australiandomestictourism-multimodel.html.mdx  australiandomestictourism-permbu-intervals.html  australiandomestictourism-permbu-intervals.html.mdx  australiandomestictourism.html  australiandomestictourism.html.mdx  australiandomestictourismcrosstemporal-newmethods.html.mdx  australiandomestictourismcrosstemporal.html  australiandomestictourismcrosstemporal.html.mdx  (+33 more)
experiments/hierarchical_baselines/: README.md  environment.yml
experiments/libs-comparison/: README.md  environment.yml
experiments/sktime-comparison/: README.md  environment.yml
hierarchicalforecast/: __init__.py  _array_compat.py  _modidx.py  _nbdev.py  core.py  covariance.py  evaluation.py  methods.py  probabilistic_methods.py  smatrix.py  utils.py
nbs/: _quarto.yml  core.ipynb  custom.yml  evaluation.ipynb  index.ipynb  methods.ipynb  mint.json  nbdev.yml  probabilistic_methods.ipynb  sidebar.yml  utils.ipynb
nbs/examples/: 1TourismSmall.ipynb  2AustralianDomesticTourism.ipynb  3AustralianPrisonPopulation.ipynb  4AustralianDomesticTourism-Intervals.ipynb  5AustralianDomesticTourism-Bootstraped-Intervals.ipynb  6AustralianDomesticTourism-Permbu-Intervals.ipynb  6PERMBU_example.ipynb  7NonNegativeReconciliation.ipynb  AustralianDomesticTourism-Bootstraped-Intervals.ipynb  AustralianDomesticTourism-Intervals.ipynb  AustralianDomesticTourism-Multimodel.ipynb  AustralianDomesticTourism-Permbu-Intervals.ipynb  AustralianDomesticTourism.ipynb  AustralianDomesticTourismCrossTemporal.ipynb  AustralianDomesticTourismTemporal.ipynb  AustralianPrisonPopulation.ipynb  HierarchicalForecast-GluonTS.ipynb  HierarchicalForecast_GluonTS.ipynb  Installation.ipynb  Introduction.ipynb  LocalGlobalAggregation.ipynb  M3withThief.ipynb  MLFrameworksExample.ipynb  NonNegativeReconciliation.ipynb  TourismLarge-Evaluation.ipynb  TourismSmall.ipynb  TourismSmallPolars.ipynb  australiandomestictourism-bootstraped-intervals.ipynb  australiandomestictourism-covariancemethods.ipynb  australiandomestictourism-intervals.ipynb  australiandomestictourism-multimodel.ipynb  australiandomestictourism-permbu-intervals.ipynb  australiandomestictourism.ipynb  australiandomestictourismcrosstemporal.ipynb  (+22 more)
src/: core.html  core.html.mdx  evaluation.html  evaluation.html.mdx  hierarchicalforecast.cpp  methods.html  methods.html.mdx  probabilistic_methods.html  probabilistic_methods.html.mdx  reconciliation.cpp  utils.html  utils.html.mdx
tests/: _test_benchmark.py  conftest.py  test_benchmark.py  test_benchmark_mint.py  test_benchmarks.py  test_core.py  test_covariance.py  test_deprecation.py  test_diagnostics.py  test_distributed.py  test_evaluation.py  test_methods.py  test_probabilistic_methods.py  test_utils.py
(+25 files in other folders)
